--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo": "~46.0.9",
     "expo-status-bar": "~1.4.0",
     "ionicons": "^6.0.3",
+    "jsonwebtoken": "^8.5.1",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.5",
