--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/drawer": "^6.4.4",
     "@react-navigation/native": "^6.0.12",
     "expo": "~46.0.9",
+    "expo-jwt": "^1.4.1",
     "expo-status-bar": "~1.4.0",
     "ionicons": "^6.0.3",
     "jsonwebtoken": "^8.5.1",
