--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@expo/webpack-config": "^0.17.0",
     "@react-navigation/drawer": "^6.4.4",
     "@react-navigation/native": "^6.0.12",
+    "@react-navigation/native-stack": "^6.8.0",
     "expo": "~46.0.9",
     "expo-jwt": "^1.4.1",
     "expo-status-bar": "~1.4.0",
