--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-toast-message": "^2.1.5",
-    "react-native-web": "~0.18.7"
+    "react-native-web": "~0.18.7",
+    "@react-native-picker/picker": "^2.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
