--- a/package.json
+++ b/package.json
@@ -1,45 +1,45 @@
 {
-    "name": "moneypanther",
-    "version": "1.0.0",
-    "main": "node_modules/expo/AppEntry.js",
-    "scripts": {
-      "start": "expo start",
-      "android": "expo start --android",
-      "ios": "expo start --ios",
-      "web": "expo start --web"
-    },
-    "dependencies": {
-      "@expo/vector-icons": "^13.0.0",
-      "@expo/webpack-config": "^0.17.0",
-      "@react-native-async-storage/async-storage": "^1.17.10",
-      "@react-native-community/datetimepicker": "^6.3.4",
-      "@react-native-picker/picker": "^2.4.4",
-      "@react-navigation/drawer": "^6.4.4",
-      "@react-navigation/native": "^6.0.12",
-      "@react-navigation/native-stack": "^6.8.0",
-      "axios": "^0.27.2",
-      "expo": "~46.0.9",
-      "expo-jwt": "^1.4.1",
-      "expo-status-bar": "~1.4.0",
-      "ionicons": "^6.0.3",
-      "jsonwebtoken": "^8.5.1",
-      "moment": "^2.29.4",
-      "react": "18.0.0",
-      "react-dom": "18.0.0",
-      "react-native": "0.69.5",
-      "react-native-chart-kit": "^6.12.0",
-      "react-native-gesture-handler": "~2.5.0",
-      "react-native-gravatar": "^1.0.2",
-      "react-native-keyboard-aware-scroll-view": "^0.9.5",
-      "react-native-masked-text": "^1.13.0",
-      "react-native-reanimated": "~2.9.1",
-      "react-native-safe-area-context": "4.3.1",
-      "react-native-screens": "~3.15.0",
-      "react-native-toast-message": "^2.1.5",
-      "react-native-web": "~0.18.7"
-    },
-    "devDependencies": {
-      "@babel/core": "^7.12.9"
-    },
-    "private": true
-  }
+  "name": "moneypanther",
+  "version": "1.0.0",
+  "main": "node_modules/expo/AppEntry.js",
+  "scripts": {
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web"
+  },
+  "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
+    "@expo/webpack-config": "^0.17.0",
+    "@react-native-async-storage/async-storage": "^1.17.10",
+    "@react-native-picker/picker": "^2.4.4",
+    "@react-navigation/drawer": "^6.4.4",
+    "@react-navigation/native": "^6.0.12",
+    "@react-navigation/native-stack": "^6.8.0",
+    "axios": "^0.27.2",
+    "expo": "~46.0.9",
+    "expo-jwt": "^1.4.1",
+    "expo-status-bar": "~1.4.0",
+    "ionicons": "^6.0.3",
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.4",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
+    "react-native": "0.69.5",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-gesture-handler": "~2.5.0",
+    "react-native-gravatar": "^1.0.2",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-masked-text": "^1.13.0",
+    "react-native-reanimated": "~2.9.1",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
+    "react-native-toast-message": "^2.1.5",
+    "react-native-web": "~0.18.7",
+    "@react-native-community/datetimepicker": "6.2.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.12.9"
+  },
+  "private": true
+}
