--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react-native-screens": "~3.15.0",
     "react-native-svg": "12.3.0",
     "react-native-toast-message": "^2.1.5",
-    "react-native-web": "~0.18.7"
+    "react-native-web": "~0.18.7",
+    "expo-linear-gradient": "~11.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
