--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "axios": "^0.27.2",
     "expo": "~46.0.9",
     "expo-jwt": "^1.4.1",
+    "expo-linear-gradient": "~11.4.0",
+    "expo-linking": "~3.2.2",
     "expo-status-bar": "~1.4.0",
     "ionicons": "^6.0.3",
     "jsonwebtoken": "^8.5.1",
@@ -35,13 +37,13 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-masked-text": "^1.13.0",
     "react-native-paper": "^4.12.5",
+    "react-native-qrcode-svg": "^6.1.2",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-svg": "12.3.0",
     "react-native-toast-message": "^2.1.5",
-    "react-native-web": "~0.18.7",
-    "expo-linear-gradient": "~11.4.0"
+    "react-native-web": "~0.18.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
