--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "react-native-gravatar": "^1.0.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-masked-text": "^1.13.0",
-    "react-native-paper": "^4.12.5",
+    "react-native-paper": "^5.0.0-rc.6",
     "react-native-qrcode-svg": "^6.1.2",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
