--- a/package.json
+++ b/package.json
@@ -30,10 +30,8 @@
     "react-dom": "18.0.0",
     "react-native": "0.69.5",
     "react-native-calendars": "^1.1289.0",
-    "react-native-chart-kit": "^6.12.0",
     "react-native-dotenv": "^3.3.1",
     "react-native-gesture-handler": "~2.5.0",
-    "react-native-gravatar": "^1.0.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-masked-text": "^1.13.0",
     "react-native-paper": "^5.0.0-rc.6",
@@ -42,9 +40,10 @@
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-select-dropdown": "^2.0.4",
-    "react-native-svg": "12.3.0",
+    "react-native-svg": "^12.3.0",
     "react-native-toast-message": "^2.1.5",
-    "react-native-web": "~0.18.7"
+    "react-native-web": "~0.18.7",
+    "victory-native": "^36.6.8"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
