--- a/app.json
+++ b/app.json
@@ -9,7 +9,7 @@
 		"icon": "./assets/icon.png",
 		"userInterfaceStyle": "automatic",
 		"splash": {
-			"image": "./assets/abelha.jpg",
+			"image": "./assets/FIGMAbelha.png",
 			"resizeMode": "spread",
 			"backgroundColor": "#ffffff"
 		},
