--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-status-bar": "~1.4.0",
     "ionicons": "^6.0.3",
     "jsonwebtoken": "^8.5.1",
+    "lottie-react-native": "^5.1.4",
     "moment": "^2.29.4",
     "react": "18.0.0",
     "react-dom": "18.0.0",
