--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "jsonwebtoken": "^8.5.1",
     "lottie-react-native": "^5.1.4",
     "moment": "^2.29.4",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-native": "0.69.5",
     "react-native-calendars": "^1.1289.0",
     "react-native-dotenv": "^3.3.1",
